marketplace-k8s/AWS/1-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-gateway-ingress
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: market-gateway-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /gateway-health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/subnets: subnet-029e388e222cce822, subnet-07f910468858e1781  #add the vpc public subnet ids
    alb.ingress.kubernetes.io/auth-session-cookie: session #get the name from the server.ts in gateway service
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=app_cookie,stickiness.app_cookie.cookie_name=session,deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: api.markettest.store




spec:
  ingressClassName: alb  #Specifies that the Ingress resource should be managed by an ALB controller. The ALB controller watches for Ingress resources with this class name and creates an ALB accordingly
  defaultBackend:
    service:
      name: market-gateway
      port: 
        number: 4000
  tls:
     - hosts:
       - '*.markettest.store'
  rules:
  - host: api.markettest.store
    http:
      paths:
      - path: /api/gateway/v1
        pathType: Prefix
        backend:
          service:
            name: market-gateway
            port: 
              number: 4000
